// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Producto Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductImage debe de mostrar el componente con la imagen  personalizada 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product 1
  </h1>
</div>
`;
